Fixed broadcasting and aligned date parsing

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -40,16 +40,22 @@
 }
 
 .empty-channel-text {
+  color: #72767d;
   margin: 0 auto;
   align-items: center;
 }
 
 .no-channel-text {
+  font-size: 17px;
+    font-weight: 600;
+    line-height: 22px;
+    text-transform: uppercase;
   text-align: center;
 }
 
 .empty-channel-message {
   text-align: center;
+  margin-top: 8px;
 }
 
 .channel-title-name-container {
@@ -249,3 +255,69 @@
   width: 100%;
   display: flex;
 }
+
+.message-index-divider {
+  width: 100%;
+  -webkit-box-align: center;
+  align-items: center;
+  cursor: default;
+  display: -webkit-box;
+  display: flex;
+  align-items: center;
+  height: 0;
+  position: relative;
+  z-index: 0;
+}
+
+.message-index-divider div {
+  height: 1px;
+  background: #474a4f;
+  -webkit-box-flex: 1;
+  flex: 1;
+  position: relative;
+  content: "";
+}
+
+// .message-index-divider::before {
+//   background: #474a4f;
+//   content: "";
+//   height: 1px;
+//   position: absolute;
+//   width: 100%;
+//   z-index: 0;
+//
+// }
+
+.message-index-divider-text {
+  text-align: center;
+  align-items: center;
+  color: rgba(153,170,181,.5);
+  border-radius: 8px;
+    color: #99aab5;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 19px;
+    padding: 0 10px;
+    position: relative;
+    z-index: 2;
+    background-color: inherit;
+}
+//   position: relative;
+//   display: inline-block;
+//   height: 25px;
+//   background-color: #fff;
+//   padding: 4px 10px;
+//   width: 230px;
+//   text-align: center;
+//   border-radius: 10px;
+//   top: -13px;
+//   cursor: default;
+//   -webkit-user-select: none;
+// }
+//
+// .message-index-divider-line {
+//   position: relative;
+//   top: 25px;
+//   width: 100%;
+//   border-top: 1px solid #eee;
+// }
